crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_callback.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"ids.map(fn (id) => id).join(\", \")\"#)"
---
Expr {
    kind: Call {
        args: [
            Expr {
                kind: Literal(
                    String(
                        ", ",
                    ),
                ),
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 29,
                    },
                    end: Position {
                        line: 1,
                        column: 33,
                    },
                },
            },
        ],
        callee: Expr {
            kind: Member {
                object: Expr {
                    kind: Call {
                        args: [
                            Expr {
                                kind: Function {
                                    params: [
                                        Pattern {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 1,
                                                    column: 13,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 15,
                                                },
                                            },
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "id",
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 1,
                                                            column: 13,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 15,
                                                        },
                                                    },
                                                    mutable: false,
                                                },
                                            ),
                                        },
                                    ],
                                    body: Expr(
                                        Expr {
                                            kind: Identifier(
                                                "id",
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 1,
                                                    column: 20,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 22,
                                                },
                                            },
                                        },
                                    ),
                                },
                                loc: SourceLocation {
                                    start: Position {
                                        line: 1,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 22,
                                    },
                                },
                            },
                        ],
                        callee: Expr {
                            kind: Member {
                                object: Expr {
                                    kind: Identifier(
                                        "ids",
                                    ),
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 1,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 4,
                                        },
                                    },
                                },
                                property: Expr {
                                    kind: Identifier(
                                        "map",
                                    ),
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 5,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 8,
                                        },
                                    },
                                },
                            },
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 1,
                                },
                                end: Position {
                                    line: 1,
                                    column: 8,
                                },
                            },
                        },
                    },
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 23,
                        },
                    },
                },
                property: Expr {
                    kind: Identifier(
                        "join",
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 24,
                        },
                        end: Position {
                            line: 1,
                            column: 28,
                        },
                    },
                },
            },
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 28,
                },
            },
        },
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 34,
        },
    },
}
