crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_conditionals-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"if (cond) { x; } else { y; }\"#)"
---
IfElse(
    IfElse {
        span: 0..28,
        cond: Ident(
            Ident {
                name: "cond",
                span: 4..8,
            },
        ),
        consequent: Block {
            span: 9..16,
            stmts: [
                Stmt {
                    kind: Expr {
                        expr: Ident(
                            Ident {
                                name: "x",
                                span: 12..13,
                            },
                        ),
                    },
                    span: 12..13,
                },
            ],
        },
        alternate: Some(
            Block {
                span: 21..28,
                stmts: [
                    Stmt {
                        kind: Expr {
                            expr: Ident(
                                Ident {
                                    name: "y",
                                    span: 24..25,
                                },
                            ),
                        },
                        span: 24..25,
                    },
                ],
            },
        ),
    },
)
