crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_conditionals.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"if (cond) { x; }\"#)"
---
Expr {
    kind: IfElse {
        cond: Expr {
            kind: Identifier(
                "cond",
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 5,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
        },
        consequent: Block {
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 11,
                },
                end: Position {
                    line: 1,
                    column: 17,
                },
            },
            stmts: [
                Stmt {
                    kind: Expr {
                        expr: Expr {
                            kind: Identifier(
                                "x",
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 13,
                                },
                                end: Position {
                                    line: 1,
                                    column: 14,
                                },
                            },
                        },
                    },
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 14,
                        },
                    },
                },
            ],
        },
        alternate: None,
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
}
