crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_exprs_with_template_strings.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"a + `b ${c} d`\")"
---
Expr {
    kind: Binary {
        left: Expr {
            kind: Identifier(
                "a",
            ),
            span: 0..1,
        },
        op: Plus,
        right: Expr {
            kind: TemplateLiteral {
                parts: [
                    String(
                        "b ",
                    ),
                    String(
                        " d",
                    ),
                ],
                exprs: [
                    Expr {
                        kind: Identifier(
                            "c",
                        ),
                        span: 9..10,
                    },
                ],
            },
            span: 3..14,
        },
    },
    span: 0..14,
}
