crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_func_calls_with_type_args-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"fst<number, string>(5, \"hello\")\"#)"
---
Expr {
    kind: Call(
        Call {
            callee: Expr {
                kind: Ident(
                    Ident {
                        name: "fst",
                        span: 0..3,
                    },
                ),
                span: 0..3,
                inferred_type: None,
            },
            type_args: Some(
                [
                    TypeAnn {
                        kind: Number,
                        span: 4..10,
                        inferred_type: None,
                    },
                    TypeAnn {
                        kind: String,
                        span: 12..18,
                        inferred_type: None,
                    },
                ],
            ),
            args: [
                Expr {
                    kind: Num(
                        Num {
                            value: "5",
                        },
                    ),
                    span: 20..21,
                    inferred_type: None,
                },
                Expr {
                    kind: Str(
                        Str {
                            span: 23..30,
                            value: "hello",
                        },
                    ),
                    span: 23..30,
                    inferred_type: None,
                },
            ],
        },
    ),
    span: 0..31,
    inferred_type: None,
}
