crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_func_calls_with_type_args.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"id<number>(5)\")"
---
Expr {
    kind: Call(
        Call {
            callee: Expr {
                kind: Ident(
                    Ident {
                        name: "id",
                        span: 0..2,
                    },
                ),
                span: 0..2,
                inferred_type: None,
            },
            type_args: Some(
                [
                    TypeAnn {
                        kind: Number,
                        span: 3..9,
                        inferred_type: None,
                    },
                ],
            ),
            args: [
                Expr {
                    kind: Num(
                        Num {
                            value: "5",
                        },
                    ),
                    span: 11..12,
                    inferred_type: None,
                },
            ],
        },
    ),
    span: 0..13,
    inferred_type: None,
}
