crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_func_with_type_params-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"fn <A, B> (a: A, b: B): A => a\")"
---
Expr {
    kind: Function(
        Function {
            type_params: Some(
                [
                    TypeParam {
                        span: 5..6,
                        name: "A",
                        bound: None,
                        default: None,
                    },
                    TypeParam {
                        span: 8..9,
                        name: "B",
                        bound: None,
                        default: None,
                    },
                ],
            ),
            params: [
                FuncParam {
                    pattern: Pattern {
                        kind: Ident(
                            BindingIdent {
                                name: "a",
                                span: 11..12,
                                mutable: false,
                            },
                        ),
                        span: 11..12,
                        inferred_type: None,
                    },
                    type_ann: Some(
                        TypeAnn {
                            kind: TypeRef(
                                "A",
                                None,
                            ),
                            span: 14..15,
                            inferred_type: None,
                        },
                    ),
                    optional: false,
                },
                FuncParam {
                    pattern: Pattern {
                        kind: Ident(
                            BindingIdent {
                                name: "b",
                                span: 17..18,
                                mutable: false,
                            },
                        ),
                        span: 17..18,
                        inferred_type: None,
                    },
                    type_ann: Some(
                        TypeAnn {
                            kind: TypeRef(
                                "B",
                                None,
                            ),
                            span: 20..21,
                            inferred_type: None,
                        },
                    ),
                    optional: false,
                },
            ],
            body: Expr(
                Expr {
                    kind: Ident(
                        Ident {
                            name: "a",
                            span: 29..30,
                        },
                    ),
                    span: 29..30,
                    inferred_type: None,
                },
            ),
            type_ann: Some(
                TypeAnn {
                    kind: TypeRef(
                        "A",
                        None,
                    ),
                    span: 24..25,
                    inferred_type: None,
                },
            ),
            is_async: false,
            is_gen: false,
        },
    ),
    span: 0..30,
    inferred_type: None,
}
