crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_function_call-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"add(5)(10)\")"
---
Expr {
    kind: Call {
        args: [
            Expr {
                kind: Number(
                    "10",
                ),
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
            },
        ],
        callee: Expr {
            kind: Call {
                args: [
                    Expr {
                        kind: Number(
                            "5",
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 5,
                            },
                            end: Position {
                                line: 1,
                                column: 6,
                            },
                        },
                    },
                ],
                callee: Expr {
                    kind: Identifier(
                        "add",
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                },
            },
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
        },
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
}
