crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_function_call-3.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"add(obj.x, obj.y)\")"
---
Expr {
    kind: Call {
        args: [
            Expr {
                kind: Member {
                    object: Expr {
                        kind: Identifier(
                            "obj",
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 5,
                            },
                            end: Position {
                                line: 1,
                                column: 8,
                            },
                        },
                    },
                    property: Expr {
                        kind: Identifier(
                            "x",
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 10,
                            },
                        },
                    },
                },
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
            },
            Expr {
                kind: Member {
                    object: Expr {
                        kind: Identifier(
                            "obj",
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 12,
                            },
                            end: Position {
                                line: 1,
                                column: 15,
                            },
                        },
                    },
                    property: Expr {
                        kind: Identifier(
                            "y",
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 16,
                            },
                            end: Position {
                                line: 1,
                                column: 17,
                            },
                        },
                    },
                },
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 17,
                    },
                },
            },
        ],
        callee: Expr {
            kind: Identifier(
                "add",
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
        },
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
}
