crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_function_call.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"add(5, 10)\")"
---
Expr {
    kind: Call(
        Call {
            callee: Expr {
                kind: Ident(
                    Ident {
                        name: "add",
                        span: 0..3,
                    },
                ),
                span: 0..3,
                inferred_type: None,
            },
            type_args: None,
            args: [
                Expr {
                    kind: Num(
                        Num {
                            value: "5",
                        },
                    ),
                    span: 4..5,
                    inferred_type: None,
                },
                Expr {
                    kind: Num(
                        Num {
                            value: "10",
                        },
                    ),
                    span: 7..9,
                    inferred_type: None,
                },
            ],
            opt_chain: false,
            throws: None,
        },
    ),
    span: 0..10,
    inferred_type: None,
}
